--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "tic-tac-toe-true",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lyashyk.github.io/TicTacToe-app/",
   "dependencies": {
     "@storybook/addon-knobs": "^5.0.6",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "storybook": "start-storybook storybook"
   },
